project.web/sources/documentation.css
html { font-size: 1.1em; }
* { font-size: 1em; font-family: system-ui; }
body { margin: 1.5em; overflow-x: hidden; }
body>* { margin: 0.75em 0 ; }

code { font-family: monospace; font-size: 1rem; }

hr { border: none; border-top: 1px solid #999; overflow: visible; text-align: center; height: 1px; margin-top: 1.5em }

ul, ol { padding-left: 1.75em; }

code { background-color: #ddd; padding: 0.1em 0.25em; border-radius: 0.2em; white-space: nowrap; }
pre { background-color: #e7e7e7; border-radius: 0.2em; padding: 0.1em 0.25em; margin-left: -0.25em; overflow-x: scroll; }
pre code { background-color: unset; padding: unset; border-radius: unset; white-space: unset; }
li code { white-space: unset; }

table { border-collapse: collapse; }
table thead, table tr:not(:last-child) { border-bottom: 1px solid #999; }
table th, table td { padding: 0.3em 0.6em; vertical-align: text-top; }
table .right { text-align: right; }

blockquote { font-style: italic; margin-left: 2em; position: relative; background: #e7d6cf; border-radius: 0.2em; }
blockquote::before { content: "“"; position: absolute; height: 100%; left: -0.6em; width: 2em; text-align: left; font-size: 5em; color: #d9beb4; }
blockquote>p { padding: 0.8em 1em; }
blockquote code { background-color: #d3ab9d; }

h1 { font-size: 1.6em; }
h2 { font-size: 1.4em; margin: 2.5em 0 0.5em 0; }
h2::before { content: " "; background: #ccc; width: calc(100% + 2.2em); height: 0.2em; display: block; margin-left: -1.1em; top: -0.5em; position: relative; }
h3, h4, h5 { font-size: 1.2em; }
h3, h5 { font-size: 1.2em; margin: 1.5em 0 0.5em 0; }
h3::before { content: " "; background: #ccc; width: calc(100% + 2.6em); height: 0.1em; display: block; margin-left: -1.3em; top: -0.25em; position: relative; }

h4 { position: relative; background-color: #ccc; padding: 0.1em 0.25em; border-radius: 0.2em; margin: 1.5em 0em 0.5em -0.25em; }
h4::before { content: " "; background-color: blue; height: 100%; width: 1.5em; display: block; float: left; position: absolute; left: -2em; border-radius: 0.2em; top: 0; }
h4>code { font-size: 1.2em; background-color: unset; padding: unset; border-radius: unset; white-space: unset; }
h4>br::before { content: " test "; }

h1:focus, h2:focus, h3:focus, h4:focus, h5:focus, h6:focus, [id]:focus { outline: none; box-shadow: none; }

.famicube{display:flex;flex-wrap:wrap}
.famicube div{font-family: monospace; font-weight: bold; padding: 0.8em 1em; width: 2em; font-size: 1.2em; text-align: center;}
.famicube div:nth-child(1){background:#000000;color:#fff}
.famicube div:nth-child(2){background:#e03c28;color:#000}
.famicube div:nth-child(3){background:#ffffff;color:#000}
.famicube div:nth-child(4){background:#d7d7d7;color:#000}
.famicube div:nth-child(5){background:#a8a8a8;color:#000}
.famicube div:nth-child(6){background:#7b7b7b;color:#fff}
.famicube div:nth-child(7){background:#343434;color:#fff}
.famicube div:nth-child(8){background:#151515;color:#fff}
.famicube div:nth-child(9){background:#0d2030;color:#fff}
.famicube div:nth-child(10){background:#415d66;color:#fff}
.famicube div:nth-child(11){background:#71a6a1;color:#000}
.famicube div:nth-child(12){background:#bdffca;color:#000}
.famicube div:nth-child(13){background:#25e2cd;color:#000}
.famicube div:nth-child(14){background:#0a98ac;color:#fff}
.famicube div:nth-child(15){background:#005280;color:#fff}
.famicube div:nth-child(16){background:#00604b;color:#fff}
.famicube div:nth-child(17){background:#20b562;color:#000}
.famicube div:nth-child(18){background:#58d332;color:#000}
.famicube div:nth-child(19){background:#139d08;color:#fff}
.famicube div:nth-child(20){background:#004e00;color:#fff}
.famicube div:nth-child(21){background:#172808;color:#fff}
.famicube div:nth-child(22){background:#376d03;color:#fff}
.famicube div:nth-child(23){background:#6ab417;color:#000}
.famicube div:nth-child(24){background:#8cd612;color:#000}
.famicube div:nth-child(25){background:#beeb71;color:#000}
.famicube div:nth-child(26){background:#eeffa9;color:#000}
.famicube div:nth-child(27){background:#b6c121;color:#000}
.famicube div:nth-child(28){background:#939717;color:#fff}
.famicube div:nth-child(29){background:#cc8f15;color:#000}
.famicube div:nth-child(30){background:#ffbb31;color:#000}
.famicube div:nth-child(31){background:#ffe737;color:#000}
.famicube div:nth-child(32){background:#f68f37;color:#000}
.famicube div:nth-child(33){background:#ad4e1a;color:#fff}
.famicube div:nth-child(34){background:#231712;color:#fff}
.famicube div:nth-child(35){background:#5c3c0d;color:#fff}
.famicube div:nth-child(36){background:#ae6c37;color:#000}
.famicube div:nth-child(37){background:#c59782;color:#000}
.famicube div:nth-child(38){background:#e2d7b5;color:#000}
.famicube div:nth-child(39){background:#4f1507;color:#fff}
.famicube div:nth-child(40){background:#823c3d;color:#fff}
.famicube div:nth-child(41){background:#da655e;color:#000}
.famicube div:nth-child(42){background:#e18289;color:#000}
.famicube div:nth-child(43){background:#f5b784;color:#000}
.famicube div:nth-child(44){background:#ffe9c5;color:#000}
.famicube div:nth-child(45){background:#ff82ce;color:#000}
.famicube div:nth-child(46){background:#cf3c71;color:#fff}
.famicube div:nth-child(47){background:#871646;color:#fff}
.famicube div:nth-child(48){background:#a328b3;color:#fff}
.famicube div:nth-child(49){background:#cc69e4;color:#000}
.famicube div:nth-child(50){background:#d59cfc;color:#000}
.famicube div:nth-child(51){background:#fec9ed;color:#000}
.famicube div:nth-child(52){background:#e2c9ff;color:#000}
.famicube div:nth-child(53){background:#a675fe;color:#000}
.famicube div:nth-child(54){background:#6a31ca;color:#fff}
.famicube div:nth-child(55){background:#5a1991;color:#fff}
.famicube div:nth-child(56){background:#211640;color:#fff}
.famicube div:nth-child(57){background:#3d34a5;color:#fff}
.famicube div:nth-child(58){background:#6264dc;color:#000}
.famicube div:nth-child(59){background:#9ba0ef;color:#000}
.famicube div:nth-child(60){background:#98dcff;color:#000}
.famicube div:nth-child(61){background:#5ba8ff;color:#000}
.famicube div:nth-child(62){background:#0a89ff;color:#fff}
.famicube div:nth-child(63){background:#024aca;color:#fff}
.famicube div:nth-child(64){background:#00177d;color:#fff}

